compilation issue fix